# rapidsmpf

./: .gitignore  run-shuffle-no-spill-fixed-input-vary-output-16GB.sh  run-shuffle-no-spill-vary-input-fix-output-16GB.sh  run-shuffle-spill-vary-input60GB.sh
cpp/examples/: CMakeLists.txt
rapidsmpf_duckdb/: CMakeLists.txt  Makefile  extension_config.cmake
rapidsmpf_duckdb/docs/: query_execution_flow.md
rapidsmpf_duckdb/examples/: CMakeLists.txt  benchmark_gpu_vs_cpu.cpp  example_gpu  example_gpu.cpp  example_gpu_noasan  example_gpu_release  example_parquet  example_parquet.cpp  example_registered_tables  example_registered_tables.cpp  example_simple  example_simple.cpp  example_tpch  example_tpch.cpp  test_filter.cpp  test_new_operators.cpp  test_tpch.sql
rapidsmpf_duckdb/examples/python/: rapidsmpf_duckdb_example.py
rapidsmpf_duckdb/src/: executor.cpp  physical_operator.cpp  physical_plan_generator.cpp  rapidsmpf_extension.cpp  table_registry.cpp
rapidsmpf_duckdb/src/include/: executor.hpp  expression_converter.hpp  physical_operator.hpp  physical_plan_generator.hpp  rapidsmpf_duckdb_extension.hpp  table_registry.hpp
rapidsmpf_duckdb/src/include/operators/: physical_aggregate.hpp  physical_filter.hpp  physical_limit.hpp  physical_order.hpp  physical_projection.hpp  physical_table_scan.hpp
rapidsmpf_duckdb/src/operators/: physical_aggregate.cpp  physical_filter.cpp  physical_limit.cpp  physical_order.cpp  physical_projection.cpp  physical_table_scan.cpp
rapidsmpf_substrait/: CMakeLists.txt  Makefile  README.md
rapidsmpf_substrait/docs/: architecture.md
rapidsmpf_substrait/examples/: create_test_data.py  example_from_json.cpp  example_substrait.cpp  test_gpu_execution.cpp  tpch_query.cpp
rapidsmpf_substrait/src/: executor.cpp  physical_operator.cpp  substrait_plan_converter.cpp  substrait_plan_parser.cpp
rapidsmpf_substrait/src/include/: executor.hpp  physical_operator.hpp  rapidsmpf_substrait.hpp  substrait_plan_converter.hpp  substrait_plan_parser.hpp
rapidsmpf_substrait/src/include/operators/: physical_aggregate_rel.hpp  physical_fetch_rel.hpp  physical_filter_rel.hpp  physical_project_rel.hpp  physical_read_rel.hpp  physical_sort_rel.hpp
rapidsmpf_substrait/src/operators/: physical_aggregate_rel.cpp  physical_fetch_rel.cpp  physical_filter_rel.cpp  physical_project_rel.cpp  physical_read_rel.cpp  physical_sort_rel.cpp
